<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="abt_app_content">SmartTabs is an application brought to you by SwaggySweng from EPFL, to give you a basic way to learn the guitar using ASCII tabs. Upgraded with a setting to slow Tab speed, and a flashing metronome in the upper right corner, we believe this application will help newcomers learn the guitar easier.\nThere is also an online editor for this app at http:\/\/178.62.199.28\/ where you can upload your own tabs, and if you're a professional, create your own tab, and then play this tab in our application!\nPlease submit any bugs encountered to swaggy_sweng@gmail.com.</string>
    <string name="abt_dev_content">This app is brought to you by team SwaggySweng from EPFL\nSwaggySweng is made by these awesome people\n\n  Faton \”Fabrice\” Ramadani\n  Ismail \”Irène\” Imani\n  Raphael \”Roofie\” ElKhoury\n  Jad \”Jeremie\” Khoury\n  Lou \”Latifa\” Richard\n  Christophe \”Chimène\” Gaudet-Blavignac\n  Loic \”Lynda\” Serafin\n\nThese are all hard-working students, dedicated to bring you an amazing app that can be great when it comes to showing-off.\n\n#TeamSwaggySwengRPZT</string>
    <string name="app_name">SmartTabs</string>
    <string name="title_activity_display">DisplayActivity</string>
    <string name="title_favorites_display">Favorites</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="search_hint">Tab Name</string>
    <string name="serverURLQuery">http://178.62.199.28/getTabs/</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_search">Search</string>
    <string name="splash_screen">Splash Screen </string>
    <string name="action_drawer">Navigation</string>
    <string name="show_help">Show Help on Startup</string>
    <string name="show_help_on_startup_no">Never</string>
    <string name="show_help_on_startup_yes">Always</string>
    <string name="title_settings">Settings</string>
    <string name="title_about_dev">About the developers</string>
    <string name="title_about_app">About the app</string>
    <string name="title_help">Help</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="help_content">Play/Pause : Click on Screen\nMetronome on upper right corner\nScroll through Tab: Swipe left & right \nAdd to Favorite: Star Icon on Lower Right\nSet Tab Speed: Arrows on bottom of the screen\nSwipe from Right to Left on Main Screen to show Menu</string>
    <string name="help_content_dialog">Play/Pause : Click on Screen\nMetronome on upper right corner\nScroll through Tab: Swipe left & right \nAdd to Favorite: Star Icon on Lower Right\nSet Tab Speed: Arrows on bottom of the screen</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_preference">PreferenceActivity</string>
    <string name="title_activity_about_app">AboutAppActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_about_devs">AboutDevsActivity</string>
    <string name="title_app_home">SmartTabs</string>
    <string name="title_activity_test">Test</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_dialog">Tutorial</string>
    <string name="title_activity_splash">SmartTabs</string>
    <string name="drawer_open"></string>
    <string name="drawer_close" />
    <string name="action_settings">Settings</string>

</resources>