<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/title_help" >
        <Preference 
            android:title="@string/title_help" 
            android:key="pref_help"></Preference>

        <CheckBoxPreference
            android:defaultValue="True"
            android:key="pref_show_help"
            android:summaryOff="@string/show_help_on_startup_no"
            android:summaryOn="@string/show_help_on_startup_yes"
            android:title="@string/show_help" />
    </PreferenceCategory>
    
    
    <PreferenceCategory android:title="@string/title_activity_help" >
        <Preference 
            android:title="@string/title_about_dev" 
            android:key="pref_abt_dev"></Preference>
        <Preference 
            android:title="@string/title_about_app" 
            android:key="pref_abt_app"></Preference>
    </PreferenceCategory>

</PreferenceScreen>